# play

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Info.plist  Justfile  Makefile  README.md  SEEK_SCRUB_NOTES.md  build.rs  initial-plan.md
.github/workflows/: build.yml
ffmpeg-sys-next-patch/: build.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse_time.rs  fuzz_probe.rs  fuzz_srt.rs
src/: audio_out.rs  cmd.rs  composite.rs  decode_audio.rs  decode_video.rs  demux.rs  input.rs  lib.rs  main.rs  osd.rs  player.rs  subtitle.rs  sync.rs  terminal.rs  time.rs  video_out.rs  visualizer.rs  window.rs
