[package]
name = "play"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "7"
ffmpeg-sys-next = { version = "7", features = [
    "build",
    "build-videotoolbox",
] }

objc2 = { version = "0.6", features = ["exception"] }
block2 = "0.6"
dispatch2 = { version = "0.3", features = ["block2"] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSNotification",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
] }
objc2-core-foundation = { version = "0.3", features = ["objc2"] }
crossbeam-channel = "0.5"
anyhow = "1"
termion = "4"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
