[package]
name = "play"
version = "0.1.4"
edition = "2024"

[dependencies]
ffmpeg-next = { version = "7", default-features = false, features = [
    "codec",
    "format",
    "software-resampling",
    "software-scaling",
] }
ffmpeg-sys-next = { version = "7", default-features = false, features = [
    "build",
    "build-videotoolbox",
    "avcodec",
    "avformat",
    "swresample",
    "swscale",
] }

objc2 = { version = "0.6", features = ["exception"] }
block2 = "0.6"
dispatch2 = { version = "0.3", features = ["block2"] }
objc2-foundation = { version = "0.3", features = [
    "NSArray",
    "NSNotification",
    "NSString",
    "NSURL",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSMenu",
    "NSMenuItem",
] }
objc2-core-foundation = { version = "0.3", features = ["objc2"] }
crossbeam-channel = "0.5"
anyhow = "1"
termion = "4"
log = { version = "0.4", features = ["release_max_level_warn"] }
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
